# cmakepack

./: CMakeLists.txt  Jenkinsfile  readme.md
cmake/: version.cmake
packaging/: CMakeLists.txt
source/: CMakeLists.txt  SomeClass.h  version.cpp.in  version.h
